fixing typo for LIS

--- a/family.html
+++ b/family.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Family — LAS351 Site</title>
+  <title>Family — LIS351 Site</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -48,7 +48,7 @@
 
   <footer>
     <p><a href="index.html">Back to home</a></p>
-    <p>&copy; Emma Huarte — LAS351</p>
+  <p>&copy; Emma Huarte — LIS351</p>
   </footer>
 </body>
 </html>
