--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Home — LAS351 Site</title>
+  <title>Home — LIS351 Site</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -62,7 +62,7 @@
   </main>
 
   <footer>
-    <p>&copy; Emma Huarte — LAS351</p>
+  <p>&copy; Emma Huarte — LIS351</p>
   </footer>
 </body>
 </html>
