Update introduction paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <a class="skip-link" href="#maincontent">Skip to main content</a>
   <header>
     <h1>Home</h1>
-    <p class="intro">[Add a short introduction here]</p>
+    <p class="intro">Hi! My name is Emma Huarte and this is my website. I am excited for you to learn more about me!</p>
     <nav aria-label="Primary">
       <ul class="nav-list">
         <li><a href="index.html" aria-current="page">Home</a></li>
