Update About section content in index.html

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   <main>
     <section>
       <h2>About this site</h2>
-      <p>This is a scaffold for the assignment. Replace placeholders with your content.</p>
-      <p>Examples of styling: <strong>bold text</strong>, <em>emphasized text</em>, <span class="large">larger text</span>, <span class="muted">muted color</span>.</p>
+      <p>Throughout this website you will learn more about my family, travle, friends, and work life. These topics are seperated into tabs, feel free to click around! </p>
     </section>
 
     <section>
