Fix spelling errors in index.html

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
   <main>
     <section>
       <h2>About this site</h2>
-      <p>Throughout this website you will learn more about my family, travle, friends, and work life. These topics are seperated into tabs, feel free to click around! </p>
+      <p>Throughout this website you will learn more about my family, travel, friends, and work life. These topics are seperated into tabs, feel free to click around! </p>
     </section>
-
     <section>
       <h2>Quick Links</h2>
       <ul>
