added paris pic

--- a/travel.html
+++ b/travel.html
@@ -54,12 +54,12 @@
       <p>Each destination below has a space for a short paragraph and an image.</p>
       <div class="destinations">
         <article class="destination-card">
-          <h3>Destination 1</h3>
+          <h3>Paris</h3>
           <figure>
-            <img src="images/photo1.svg" alt="Destination 1 placeholder image">
-            <figcaption>Caption for destination 1</figcaption>
+            <img src="images/paris.jpg" alt="Photograph of Paris">
+            <figcaption>Paris</figcaption>
           </figure>
-          <p class="dest-desc">[Short paragraph about Destination 1]</p>
+          <p class="dest-desc">[Short paragraph about Paris]</p>
         </article>
 
         <article class="destination-card">
