Update contact information in index.html
Added email and phone number to the contact section.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
     <section>
       <h2>Contact & External</h2>
-      <p>For more info, visit <a href="https://webaim.org/" target="_blank" rel="noopener">WebAIM (web accessibility resource)</a>.</p>
+      <p>Email: huartee@gmail.com 
+    phone: 714-502-4405 </a>.</p>
     </section>
 
     <section>
