Revise travel content and add destination details
Updated travel descriptions and added new destinations.

--- a/travel.html
+++ b/travel.html
@@ -24,16 +24,16 @@
   <main id="maincontent">
     <section class="hero">
       <h2>Places I've been</h2>
-      <p>[Add travel intro here]</p>
+      <p>I studied abroad last semester in Barcelona, and travelled every weekend. It was one of the most amazing experiences and I am so grateful I was able to take advantage of the opportunity.</p>
     </section>
 
     <section class="grid">
       <div>
         <h3>Destinations</h3>
         <ol>
-          <li>Destination 1</li>
-          <li>Destination 2</li>
-          <li>Destination 3</li>
+          <li>Paris</li>
+          <li>Amalfi Coast</li>
+          <li>Copenhagen</li>
         </ol>
       </div>
 
@@ -59,16 +59,16 @@
             <img src="images/paris.jpg" alt="Photograph of Paris">
             <figcaption>Paris</figcaption>
           </figure>
-          <p class="dest-desc">[Short paragraph about Paris]</p>
+          <p class="dest-desc">Paris was one of the most beautiful places I have ever been to. I was with two of my best friends and we ate our way through the city. We wore berets, got crossaints at every corner, and were tourists at the Palace of Versailles. I would love to go back someday!</p>
         </article>
 
         <article class="destination-card">
           <h3>Destination 2</h3>
           <figure>
             <img src="images/photo2.svg" alt="Destination 2 placeholder image">
-            <figcaption>Caption for destination 2</figcaption>
+            <figcaption> </figcaption>
           </figure>
-          <p class="dest-desc">[Short paragraph about Destination 2]</p>
+          <p class="dest-desc">One of my other favorite trips was the Amalfi Coast. We were with a big group of boys and girls and went to Capri, Positano, and Sorrento throughout the weekend.</p>
         </article>
 
         <article class="destination-card">
@@ -77,7 +77,7 @@
             <img src="images/photo3.svg" alt="Destination 3 placeholder image">
             <figcaption>Caption for destination 3</figcaption>
           </figure>
-          <p class="dest-desc">[Short paragraph about Destination 3]</p>
+          <p class="dest-desc"> My next favorite trip was Copenhagen. There was amazing shopping and views throughout the city and we loved wandering the streets aimlessly. The sun came out while we were there which made it much more enjoyable as well! </p>
         </article>
       </div>
     </section>
