Update family content and list family members

--- a/family.html
+++ b/family.html
@@ -24,16 +24,16 @@
   <main id="maincontent">
     <section>
       <h2>About my family</h2>
-      <p>[Add family content here]</p>
+      <p>I am one of five Huarte's, with my parents and two brothers. My older brother Jake is 23, and my younger brother Matteo is 17.</p>
       <p>Styling examples: <strong>strong text</strong>, <span class="large">large span</span>.</p>
     </section>
 
     <section>
       <h3>Family members</h3>
       <ul>
-        <li>Member 1</li>
-        <li>Member 2</li>
-        <li>Member 3</li>
+        <li>My parents, Mark and Kelly</li>
+        <li>Jake Tiernan</li>
+        <li>Matteo John</li>
       </ul>
     </section>
 
