Enhance family member descriptions in family.html
Updated family descriptions with additional details.

--- a/family.html
+++ b/family.html
@@ -25,15 +25,15 @@
     <section>
       <h2>About my family</h2>
       <p>I am one of five Huarte's, with my parents and two brothers. My older brother Jake is 23, and my younger brother Matteo is 17.</p>
-      <p>Styling examples: <strong>strong text</strong>, <span class="large">large span</span>.</p>
+      <p>
     </section>
 
     <section>
       <h3>Family members</h3>
       <ul>
-        <li>My parents, Mark and Kelly</li>
-        <li>Jake Tiernan</li>
-        <li>Matteo John</li>
+        <li>My parents, Mark and Kelly: They met at the University of San Diego and got married in 1998, moving to Orange County to raise us.</li>
+        <li>Jake Tiernan: He went to West Point Military Academy and graduated in 2024. He got married to his wife, Samantha, a month after graduation and tehy are now stationed in Fort Carson, Colorado.</li>li>
+        <li>Matteo John: He is a junior in high school, and has committed to playing Division 1 Tennis at the University of Southern California.</li>
       </ul>
     </section>
 
