Update internship section in work.html

--- a/work.html
+++ b/work.html
@@ -28,11 +28,13 @@
     </section>
 
     <section>
-      <h3>Tasks</h3>
-      <p>Examples of styling changes: <em>italic</em>, <span class="muted">muted</span>.</p>
+      <h3>Internships</h3>
+      <p></p>
       <ol>
-        <li>Task 1</li>
-        <li>Task 2</li>
+        <li>FOX Sports in Los Angeles: I was a Talent and Production Development intern for summer of 2024.</li>
+        <li>ESPN in Madison: I was a Sales and Marketing intern for fall of 2024.</li>
+        <li> BIG Ten Network in Chicago: I was an Event Marketing intern for summer of 2025. </li>
+        <li> BIG Ten Network in Madison: I am an on campus brand ambassador for the 2025-2026 school year. </li>
       </ol>
     </section>
   </main>
