--- a/family.html
+++ b/family.html
@@ -32,7 +32,7 @@
       <h3>Family members</h3>
       <ul>
         <li>My parents, Mark and Kelly: They met at the University of San Diego and got married in 1998, moving to Orange County to raise us.</li>
-        <li>Jake Tiernan: He went to West Point Military Academy and graduated in 2024. He got married to his wife, Samantha, a month after graduation and tehy are now stationed in Fort Carson, Colorado.</li>li>
+        <li>Jake Tiernan: He went to West Point Military Academy and graduated in 2024. He got married to his wife, Samantha, a month after graduation and they are now stationed in Fort Carson, Colorado.</li>
         <li>Matteo John: He is a junior in high school, and has committed to playing Division 1 Tennis at the University of Southern California.</li>
       </ul>
     </section>
