Revise friends content and remove contact section
Updated the friends section with personal experiences and removed the contact section.

--- a/friends.html
+++ b/friends.html
@@ -24,17 +24,14 @@
   <main id="maincontent">
     <section>
       <h2>Friends</h2>
-      <p>[Add friends content here]</p>
+      <p>I have loved going to a big college because it gives me the opportunity to meet people from all different hometowns, pasts, and lifestyles. Whether I have made friends through classes, my sorority, church groups, or intramural sports, I have loved putting myself out there. </p>
       <figure>
         <img src="images/photo2.svg" alt="Friends placeholder image">
-        <figcaption>Friends image</figcaption>
+        <figcaption>This is a photo of my friend group that I have made since being a student here. </figcaption>
       </figure>
     </section>
 
-    <section>
-      <h3>Contact</h3>
-      <p>Link to an external site: <a href="https://www.example.com/" target="_blank" rel="noopener">Example website</a>.</p>
-    </section>
+  
   </main>
 
   <footer>
