--- a/index.html
+++ b/index.html
@@ -39,23 +39,12 @@
 
     <section>
       <h2>Contact & External</h2>
-      <p>Email: huartee@gmail.com 
+      <p>Email: huartee@gmail.com,
     phone: 714-502-4405 </a>.</p>
     </section>
 
     <section>
-      <h2>Images</h2>
-      <p>Images have been moved to the Travel page so they can be associated with destinations.</p>
-      <p><a href="travel.html">Go to Travel page to edit destination images</a></p>
-    </section>
-
-    <section>
-      <h2>Terminology</h2>
-      <dl>
-        <dt>Term A</dt>
-        <dd>Definition for term A (replace with your own).</dd>
-        <dt>Term B</dt>
-        <dd>Definition for term B.</dd>
+    
       </dl>
     </section>
   </main>
