--- a/family.html
+++ b/family.html
@@ -39,10 +39,20 @@
 
     <section>
       <h3>Gallery</h3>
-      <figure>
-        <img src="images/photo1.svg" alt="Family placeholder image">
-        <figcaption>Family image</figcaption>
-      </figure>
+      <div class="gallery-grid">
+        <figure class="small-figure">
+          <img src="images/IMG_9679.JPG" alt="Family photo IMG 9679">
+          <figcaption>This is my family at my brothers wedding this past June.</figcaption>
+        </figure>
+        <figure class="small-figure">
+          <img src="images/family1.jpg" alt="Family photo family1">
+          <figcaption>My siblings and I at Jake's graduation.</figcaption>
+        </figure>
+        <figure class="small-figure">
+          <img src="images/family2.jpg" alt="Family photo family2">
+          <figcaption>My family on our annual trip to Italy.</figcaption>
+        </figure>
+      </div>
     </section>
   </main>
 
