--- a/friends.html
+++ b/friends.html
@@ -25,10 +25,20 @@
     <section>
       <h2>Friends</h2>
       <p>I have loved going to a big college because it gives me the opportunity to meet people from all different hometowns, pasts, and lifestyles. Whether I have made friends through classes, my sorority, church groups, or intramural sports, I have loved putting myself out there. </p>
-      <figure>
-        <img src="images/photo2.svg" alt="Friends placeholder image">
-        <figcaption>This is a photo of my friend group that I have made since being a student here. </figcaption>
-      </figure>
+      <div class="gallery-grid">
+        <figure class="small-figure">
+          <img src="images/IMG_8975.jpeg" alt="Friends photo IMG 8975">
+          <figcaption>These are my friends and I at the beach in my hometown.</figcaption>
+        </figure>
+        <figure class="small-figure">
+          <img src="images/friends1.jpg" alt="Friends photo friends1">
+          <figcaption>These are my college friends all eating dinner together.</figcaption>
+        </figure>
+        <figure class="small-figure">
+          <img src="images/friends2.JPG" alt="Friends photo friends2">
+          <figcaption>This is one of my best friends, Ava, and I at dinner.</figcaption>
+        </figure>
+      </div>
     </section>
 
   
