--- a/index.html
+++ b/index.html
@@ -22,31 +22,38 @@
     </nav>
   </header>
 
-  <main>
-    <section>
-      <h2>About this site</h2>
-      <p>Throughout this website you will learn more about my family, travel, friends, and work life. These topics are seperated into tabs, feel free to click around! </p>
-    </section>
-    <section>
-      <h2>Quick Links</h2>
-      <ul>
-        <li><a href="travel.html">Travel page</a></li>
-        <li><a href="family.html">Family page</a></li>
-        <li><a href="work.html">Work page</a></li>
-        <li><a href="friends.html">Friends page</a></li>
-      </ul>
-    </section>
+  <main id="maincontent">
+    <section class="no-gap">
+      <div class="two-col-overall">
+        <div class="left-col">
+          <h2>About this site</h2>
+          <p>Throughout this website you will learn more about my family, travel, friends, and work life. These topics are separated into tabs, feel free to click around!</p>
 
-    <section>
-      <h2>Contact & External</h2>
-      <p>Email: huartee@gmail.com,
-    phone: 714-502-4405 </a>.</p>
-    </section>
+          <h2>Quick Links</h2>
+          <div class="quick-row">
+            <div class="quick-links">
+              <ul>
+                <li><a href="travel.html">Travel page</a></li>
+                <li><a href="family.html">Family page</a></li>
+                <li><a href="work.html">Work page</a></li>
+                <li><a href="friends.html">Friends page</a></li>
+              </ul>
+            </div>
+          </div>
 
-    <section>
+          <h2>Contact & External</h2>
+          <p>Email: huartee@gmail.com, phone: 714-502-4405.</p>
+        </div>
+
+        <aside class="right-col" aria-hidden="false">
+          <figure>
+            <img src="images/176A4574.JPG" alt="Portrait of Emma Huarte">
+            <figcaption>Emma Huarte — photo</figcaption>
+          </figure>
+        </aside>
+      </div>
+    </section>
     
-      </dl>
-    </section>
   </main>
 
   <footer>
