--- a/travel.html
+++ b/travel.html
@@ -22,24 +22,19 @@
   </header>
 
   <main id="maincontent">
-    <section class="hero">
-      <h2>Places I've been</h2>
-      <p>I studied abroad last semester in Barcelona, and travelled every weekend. It was one of the most amazing experiences and I am so grateful I was able to take advantage of the opportunity.</p>
-    </section>
-
     <section class="grid">
       <div>
-        <h3>Destinations</h3>
+        <h2>Places I've been</h2>
+        <p>I studied abroad last semester in Barcelona, and travelled every weekend. It was one of the most amazing experiences and I am so grateful I was able to take advantage of the opportunity.</p>
+      </div>
+
+      <div>
+        <h2>Favorite destinations</h2>
         <ol>
           <li>Paris</li>
           <li>Amalfi Coast</li>
           <li>Copenhagen</li>
         </ol>
-      </div>
-
-      <div>
-  
-        </dl>
       </div>
     </section>
 
@@ -57,29 +52,26 @@
         </article>
 
         <article class="destination-card">
-          <h3>Destination 2</h3>
+          <h3>Amalfi Coast</h3>
           <figure>
-            <img src="images/photo2.svg" alt="Destination 2 placeholder image">
-            <figcaption> </figcaption>
+            <img src="images/IMG_6395.jpg" alt="Photograph of the Amalfi Coast">
+            <figcaption>Amalfi Coast</figcaption>
           </figure>
           <p class="dest-desc">One of my other favorite trips was the Amalfi Coast. We were with a big group of boys and girls and went to Capri, Positano, and Sorrento throughout the weekend.</p>
         </article>
 
         <article class="destination-card">
-          <h3>Destination 3</h3>
+          <h3>Copenhagen</h3>
           <figure>
-            <img src="images/photo3.svg" alt="Destination 3 placeholder image">
-            <figcaption>Caption for destination 3</figcaption>
+            <img src="images/Facetune_23-02-2025-10-02-36.jpg" alt="Photograph of Copenhagen">
+            <figcaption>Copenhagen</figcaption>
           </figure>
           <p class="dest-desc"> My next favorite trip was Copenhagen. There was amazing shopping and views throughout the city and we loved wandering the streets aimlessly. The sun came out while we were there which made it much more enjoyable as well! </p>
         </article>
       </div>
     </section>
 
-    <section>
-      <h2>External resources</h2>
-      <p>Learn more at <a href="https://www.lonelyplanet.com/" target="_blank" rel="noopener">Lonely Planet</a>.</p>
-    </section>
+    
   </main>
 
   <footer>
