--- a/work.html
+++ b/work.html
@@ -23,20 +23,31 @@
 
   <main id="maincontent">
     <section>
-      <h2>About my work</h2>
-      <p>[Add work content here]</p>
+      <h2>Internships</h2>
+      <dl>
+        <dt>FOX Sports (Los Angeles)</dt>
+        <dd>Talent and Production Development intern — Summer 2024.</dd>
+
+        <dt>ESPN (Madison)</dt>
+        <dd>Sales and Marketing intern — Fall 2024.</dd>
+
+        <dt>BIG Ten Network (Chicago)</dt>
+        <dd>Event Marketing intern — Summer 2025.</dd>
+
+        <dt>BIG Ten Network (Madison)</dt>
+        <dd>On-campus brand ambassador — 2025–2026 school year.</dd>
+      </dl>
     </section>
 
-    <section>
-      <h3>Internships</h3>
-      <p></p>
-      <ol>
-        <li>FOX Sports in Los Angeles: I was a Talent and Production Development intern for summer of 2024.</li>
-        <li>ESPN in Madison: I was a Sales and Marketing intern for fall of 2024.</li>
-        <li> BIG Ten Network in Chicago: I was an Event Marketing intern for summer of 2025. </li>
-        <li> BIG Ten Network in Madison: I am an on campus brand ambassador for the 2025-2026 school year. </li>
-      </ol>
+    <section id="resume-viewer">
+      <h3>Resume (preview)</h3>
+      <p>You can scroll the embedded resume below. If it doesn't display in your browser, use the download link.</p>
+      <div class="pdf-viewer" aria-hidden="false">
+        <iframe src="media/resume.pdf" title="Resume PDF" role="document"></iframe>
+      </div>
+      <p><a class="resume-link" href="media/resume.pdf" download>Download resume (PDF)</a></p>
     </section>
+    
   </main>
 
   <footer>
